--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trash",
+  "name": "gcms-scoped-schema",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "prepare": "install-peers",
